--- a/index.css
+++ b/index.css
@@ -64,11 +64,12 @@
      background-color: var(--cor5);
      padding: 10px;
      padding-left: 45px;
+     text-align: center;
  }
 
 nav a{
     font-size: 0.95em;
-    margin-right: 30px;
+    margin-right: 50px;
     text-decoration: none;
     color: white;
     text-shadow: 0px 7px 9px rgba(0, 0, 0, 0.593);
@@ -78,6 +79,7 @@ nav a{
 }
 
 nav > a:hover{
+    padding: 8px;
     background-color: var(--cor2);
     color: var(--cor5);
     text-decoration: underline;
